kubernetes/k3s-01/workloads/mariadb/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: docker.io/library/mariadb:11.8.9@sha256:6422478cb8e159f080fb1d8ccf65101e26fe51385787fde7d16c3b165a331f15
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mariadb
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb-encrypted
