kubernetes/k3s-01/workloads/mariadb/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb
  namespace: mariadb
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: mariadb
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: firefly
        podSelector:
          matchLabels:
            app: firefly
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: nextcloud
        podSelector:
          matchLabels:
            app: nextcloud
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: romm
        podSelector:
          matchLabels:
            app: romm
      ports:
        - protocol: TCP
          port: 3306
